fix scrolling on iOS per @evenwu

--- a/app/styles/hack.sass
+++ b/app/styles/hack.sass
@@ -154,6 +154,7 @@ body
     background: url(/img/ps_neutral.png) #f4f4f4
     +box-flex(20)
     article
+      -webkit-overflow-scrolling: touch
       position: absolute
       top: 0
       bottom: 0px
